--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }, 1000);
 
         setTimeout(function () {
-            window.location = "2.html";
+            window.location = "https://ringtone11.github.io/Customer2/";
         }, 1000);
     </script>
 </body>
