--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Loading Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Login Form</title>
     <style>
         body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #ffffff;
-        }
-        img{
+    font-family: Arial, sans-serif;
+    background-color: #f9f9f9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
+.container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 700px;
+    height: 800px;
+    text-align: left; /* Changed to left for label alignment */
+}
+img{
             width: 60%;
         }
+
     </style>
 </head>
 <body>
-    <div class="loading-container">
+    <div class="container">
+        <div class="loading-container">
         <div class="loading-circle"></div>
         <label for="valid" class="loading-text">
            
@@ -32,6 +45,7 @@
             </a>
         <span id="dots"></span></label>
    
+    </div>
     </div>
     <script>
         var dots = document.getElementById("dots");
